remove fixed position mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -196,6 +196,13 @@ header, footer {
 
 
 @media only screen and (max-width: 780px) {
+    .fixed-header {
+        position: static;
+    }
+    #nav-ul {
+        position: static;
+    }
+    
     sidebar, main {
         grid-column: 1 / 3;
     } 
